apps/production/deanqx-com/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deanqx-com
  namespace: deanqx-com
spec:
  template:
    spec:
      containers:
        - name: deanqx-com
          image: ghcr.io/deanqx/deanqx.com:v0.1.1 # {"$imagepolicy": "deanqx-com:deanqx-com"}
