apps/production/deanqx-com/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: www-deanqx-com-route
  namespace: deanqx-com
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
      sectionName: https-deanqx-com
  hostnames:
    - "www.deanqx.com"
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=15552000"
      backendRefs:
        - name: deanqx-com
          kind: Service
          port: 80
